# BigDecimal

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/: BigDecimal.h  Maths.h  StringHelper.h
src/: BigDecimal.cpp  BigDecimalTests.cpp  Maths.cpp  MathsTests.cpp  StringHelper.cpp  StringHelperTests.cpp
